--- a/web/app/package.json
+++ b/web/app/package.json
@@ -14,7 +14,8 @@
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recoil": "^0.7.6"
+    "recoil": "^0.7.6",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.11.7",
