--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -11,9 +11,9 @@ gem "pg", "~> 1.4.4"
 
 # Use the Puma web server [https://github.com/puma/puma]
 gem "puma", "~> 5.6.5"
-gem 'dotenv-rails'
 gem 'jwt'
 gem 'rack-cors'
+
 # Build JSON APIs with ease [https://github.com/rails/jbuilder]
 # gem "jbuilder"
 
@@ -41,6 +41,8 @@ group :development, :test do
 end
 
 group :development do
+    gem 'dotenv-rails'
+    gem 'annotate'
     # Speed up commands on slow machines / big apps [https://github.com/rails/spring]
     # gem "spring"
 end
