--- a/web/app/package.json
+++ b/web/app/package.json
@@ -15,6 +15,7 @@
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
     "recoil": "^0.7.6",
     "recoil-persist": "^4.2.0",
     "sass": "^1.55.0",
