--- a/web/app/tsconfig.json
+++ b/web/app/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/Calendar/CalendarWrapper.jsx", "components/Calendar/CalendarWrapper.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "context/ContextWrapper.jsx", "context/ContextWrapper.js", "context/ContextWrapper.js", "components/Calendar/CalendarWrapper.jsx", "components/Calendar/CalendarWrapper.jsx"],
   "exclude": ["node_modules"]
 }
